--- a/20220711/pom.xml
+++ b/20220711/pom.xml
@@ -20,6 +20,14 @@
   </properties>
 
   <dependencies>
+
+	
+ 	<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+	<dependency>
+	    <groupId>com.oracle.database.jdbc</groupId>
+	    <artifactId>ojdbc8</artifactId>
+	    <version>19.3.0.0</version>
+	</dependency> 
   
   <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 	<dependency>
